# oceanum-python

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  Untitled.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  run_test.py  setup.py  tmp.mkv.REMOVED.git-id  tox.ini
.github/workflows/: build-and-test.yml  build-image.yml  pypi-publish-test.yml  pypi-publish.yml
conda/: meta.yaml
docs/: Makefile  api.rst  cli.rst  conf.py  index.rst  installation.rst  make.bat  oceanum.rst  oceanum.storage.rst  requirements.txt  usage.rst
docs/_build/doctrees/: about.doctree  api.doctree  cli.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  oceanum.datamesh.doctree  oceanum.doctree  oceanum.storage.doctree  oceanum.utils.doctree  usage.doctree
docs/_build/doctrees/Connector/: oceanum.datamesh.connection.Connector.get_catalog.doctree  oceanum.datamesh.connection.Connector.get_datasource.doctree  oceanum.datamesh.connection.Connector.load_datasource.doctree  oceanum.datamesh.connection.Connector.query.doctree
docs/_build/doctrees/Datasource/: oceanum.datamesh.datasource.Datasource.load.doctree  oceanum.datamesh.datasource.Datasource.query.doctree
docs/_build/doctrees/_generated/: oceanum.datamesh.catalog.Catalog.doctree  oceanum.datamesh.connection.Connector.doctree  oceanum.datamesh.datasource.Datasource.doctree  oceanum.datamesh.query.GeoFilter.doctree  oceanum.datamesh.query.Query.doctree
docs/_build/doctrees/classes/: oceanum.datamesh.catalog.Catalog.doctree  oceanum.datamesh.connection.Connector.doctree  oceanum.datamesh.connection.Connector.get_catalog.doctree  oceanum.datamesh.connection.Connector.get_datasource.doctree  oceanum.datamesh.connection.Connector.host.doctree  oceanum.datamesh.connection.Connector.load_datasource.doctree  oceanum.datamesh.connection.Connector.query.doctree  oceanum.datamesh.datasource.Datasource.container.doctree  oceanum.datamesh.datasource.Datasource.description.doctree  oceanum.datamesh.datasource.Datasource.doctree  oceanum.datamesh.datasource.Datasource.load.doctree  oceanum.datamesh.datasource.Datasource.name.doctree  oceanum.datamesh.datasource.Datasource.query.doctree  oceanum.datamesh.datasource.Datasource.tend.doctree  oceanum.datamesh.datasource.Datasource.tstart.doctree  oceanum.datamesh.query.GeoFilter.doctree  oceanum.datamesh.query.Query.doctree
docs/_build/html/: .buildinfo  about.html  api.html  cli.html  genindex.html  index.html  installation.html  modules.html  objects.inv  oceanum.datamesh.html  oceanum.html  oceanum.storage.html  oceanum.utils.html  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/Connector/: oceanum.datamesh.connection.Connector.get_catalog.html  oceanum.datamesh.connection.Connector.get_datasource.html  oceanum.datamesh.connection.Connector.load_datasource.html  oceanum.datamesh.connection.Connector.query.html
docs/_build/html/Datasource/: oceanum.datamesh.datasource.Datasource.load.html  oceanum.datamesh.datasource.Datasource.query.html
docs/_build/html/_generated/: oceanum.datamesh.catalog.Catalog.html  oceanum.datamesh.connection.Connector.html  oceanum.datamesh.datasource.Datasource.html  oceanum.datamesh.query.GeoFilter.html  oceanum.datamesh.query.Query.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: about.rst.txt  api.rst.txt  cli.rst.txt  index.rst.txt  modules.rst.txt  oceanum.datamesh.rst.txt  oceanum.rst.txt  oceanum.utils.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/classes/: oceanum.datamesh.catalog.Catalog.html  oceanum.datamesh.connection.Connector.get_catalog.html  oceanum.datamesh.connection.Connector.get_datasource.html  oceanum.datamesh.connection.Connector.host.html  oceanum.datamesh.connection.Connector.html  oceanum.datamesh.connection.Connector.load_datasource.html  oceanum.datamesh.connection.Connector.query.html  (+10 more)
docs/classes/datamesh/: oceanum.datamesh.Catalog.rst  oceanum.datamesh.Connector.rst  oceanum.datamesh.Datasource.rst  oceanum.datamesh.Query.rst  oceanum.datamesh.catalog.Catalog.rst  oceanum.datamesh.connection.Connector.rst  oceanum.datamesh.datasource.Datasource.rst  oceanum.datamesh.query.GeoFilter.rst
docs/classes/storage/: oceanum.storage.FileSystem.rst
oceanum/: __init__.py  __main__.py  cli.py
oceanum/.github/: ISSUE_TEMPLATE.md
oceanum/cli/: auth.py  base.py  datamesh.py  dpm.py  main.py  models.py  renderer.py  settings.py  storage.py  utils.py
oceanum/cli/auth/: __init__.py
oceanum/cli/datamesh/: datamesh.py
oceanum/cli/dpm/: TODO.md  client.py  dpm.py  modelgen.sh  models.py  project.py  route.py  user.py  utils.py
oceanum/cli/storage/: __init__.py  storage.py
oceanum/datamesh/: __init__.py  accessor.py  cache.py  catalog.py  connection.py  datasource.py  exceptions.py  query.py  session.py  storage.py  utils.py  zarr.py
oceanum/dpm/: client.py  modelgen.sh  models.py
oceanum/storage/: filesystem.py
oceanum/utils/: response.py
src/oceanum/: .travis.yml  __init__.py  __main__.py  _base.py
src/oceanum/cli/: __init__.py  auth.py  datamesh.py  models.py  renderer.py  storage.py  utils.py
src/oceanum/datamesh/: accessor.py  cache.py  catalog.py  connection.py  datasource.py  exceptions.py  gemini.py  gemini_tqdm.py  query.py  session.py  utils.py  zarr.py
src/oceanum/storage/: __init__.py  filesystem.py
tests/: conftest.py  test_cache.py  test_catalog.py  test_cli.py  test_cli_auth.py  test_cli_dpm.py  test_cli_extension_loader.py  test_cli_main.py  test_cli_renderer.py  test_cli_storage.py  test_datamesh_connect.py  test_datamesh_load.py  test_datamesh_query.py  test_datamesh_write.py  test_datasource.py  test_metadata_update.py  test_oceanum.py  test_query.py  test_storage.py  test_strict_base_model.py  test_verify_parameter.py  test_video_compat.py  test_zarr_append.py  test_zarr_groups.py
tests/data/: dpm-project.yaml  grid_data_1.nc  point_data_1.csv  raster_data_1.tif
(+97 files in other folders)
