[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanum"
description = "Library for oceanum.io services"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["oceanum", "datamesh", "oceanum.io"]
authors = [
  { name = "Oceanum Developers", email="developers@oceanum.science" },
]
maintainers = [
  {name = "Oceanum Developers", email = "developers@oceanum.science"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
  "aiohttp",
  "click",
  "cftime",
  "dask",
  "decorator",
  "fsspec",
  "geojson-pydantic",
  "geopandas",
  "h5netcdf",
  "numpy",
  "orjson",
  "pandas",
  "platformdirs",
  "pyarrow",
  "shapely",
  "tabulate",
  "xarray",
  "rioxarray",
  "zarr",
  "dask[dataframe,distributed]",
  "msgpack",
  "cftime",
  "python-jsonpath",
  "requests,
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-env",
]
video = [
    "xarray_video",
]
eidos= [
    "oceanum.eidos",
]
docs = [
  "autodoc-pydantic",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinxcontrib-programoutput",
]

[project.urls]
"Homepage" = "https://oceanum.io/"
"Source" = "https://github.com/oceanum-io/oceanum-python"
"Documentation" = "https://oceanum-python.readthedocs.io/en/latest/"
"Tracker" = "https://github.com/oceanum-io/oceanum-python/issues"

[project.scripts]
oceanum = "oceanum.__main__:main"

[project.entry-points."fsspec.specs"]
"oceanum" = "oceanum.storage:FileSystem"

[project.entry-points."oceanum.cli"]
"auth" = "oceanum.cli.auth"
"datamesh" = "oceanum.cli.datamesh"
"storage" = "oceanum.cli.storage"

[project.entry-points."oceanum.cli.prax"]
"main" = "oceanum.cli.prax.main"
"project" = "oceanum.cli.prax.project"
"build" = "oceanum.cli.prax.build"
"pipeline" = "oceanum.cli.prax.pipeline"
"task" = "oceanum.cli.prax.task"
"stage" = "oceanum.cli.prax.stage"
"log" = "oceanum.cli.prax.log"
"route" = "oceanum.cli.prax.route"

[tool.setuptools.dynamic]
version = {attr = "oceanum.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]
include = [
  "oceanum",
  "oceanum.datamesh",
  "oceanum.storage",
  "oceanum.cli.main",
  "oceanum.cli.common",
  "oceanum.cli.auth",
  "oceanum.cli.datamesh",
  "oceanum.cli.storage",
]
exclude = ["tests", "docs"]

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
required_plugins = "pytest-env"
env = [
  "STORAGE_SERVICE = https://storage.oceanum.io",
]