[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanum"
description = "Library for oceanum.io services"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["oceanum", "datamesh", "oceanum.io"]
authors = [
    { name = "Oceanum Developers", email = "developers@oceanum.science" },
]
maintainers = [
    { name = "Oceanum Developers", email = "developers@oceanum.science" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "click",
    "cftime",
    "dask[dataframe,distributed]",
    "decorator",
    "fsspec",
    "geojson-pydantic",
    "geopandas",
    "h5netcdf[h5py]",
    "msgpack",
    "netcdf4",
    "numpy",
    "numcodecs",
    "orjson",
    "pandas",
    "platformdirs",
    "pyarrow",
    "pydantic[email]",
    "python-jsonpath",
    "requests",
    "shapely",
    "tabulate",
    "xarray",
    "rioxarray",
    "zarr<3",
]
dynamic = ["version"]

[project.optional-dependencies]
eidos = ["oceanum.eidos"]
video = ["xarray_video"]

[dependency-groups]
dev = [
    "build",
    "twine",
    {include-group = "tests"},
]
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "python-dotenv",
]
docs = [
    "autodoc-pydantic",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinxcontrib-programoutput",
]


[project.urls]
"Homepage" = "https://oceanum.io/"
"Source" = "https://github.com/oceanum-io/oceanum-python"
"Documentation" = "https://oceanum-python.readthedocs.io/en/latest/"
"Tracker" = "https://github.com/oceanum-io/oceanum-python/issues"

[project.scripts]
oceanum = "oceanum.__main__:main"

[project.entry-points."fsspec.specs"]
"oceanum" = "oceanum.storage:FileSystem"

[project.entry-points."oceanum.cli.extensions"]
"auth" = "oceanum.cli.auth"
"datamesh" = "oceanum.cli.datamesh"
"storage" = "oceanum.cli.storage"

[tool.setuptools.dynamic]
version = { attr = "oceanum.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]
include = [
  "oceanum",
  "oceanum.datamesh",
  "oceanum.storage",
  "oceanum.cli",
  "oceanum.cli.models",
]
exclude = ["tests", "docs"]

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
required_plugins = "pytest-env"
pythonpath = ["src"]
env = ["STORAGE_SERVICE = https://storage.oceanum.io"]
